--- a/package.json
+++ b/package.json
@@ -11,26 +11,50 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.9.2",
-    "lucide-react": "^0.503.0",
     "next": "^15.3.1",
-    "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.5.3",
-    "tailwind-merge": "^3.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3"
+    "react-dom": "^19.1.0"
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
